# backend/internal/dto/dto_auth.go
@@ -11,3 +11,13 @@ type SignInResponse struct {
 	RefreshToken string `json:"refresh_token"`
 	User         User   `json:"user"`
 }
+
+type RefreshTokenRequest struct {
+	RefreshToken string `json:"refresh_token" validate:"required"`
+}
+
+type RefreshTokenResponse struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+}
+
